# qag-python-final-project-todoist

./: .gitignore  README.md  config.py  conftest.py  doist_api_methods.py  pyproject.toml  requirements.txt
qag_python_final_project_todoist/api_model/api_methods/: delete_task.py  get_tasks.py  post_task.py
qag_python_final_project_todoist/api_model/clients/: delete_task.py  post_task.py  tasks.py
qag_python_final_project_todoist/api_model/schemas/: get_tasks_schema.py
qag_python_final_project_todoist/api_model/utils/: client.py  configuration.py
qag_python_final_project_todoist/model/pages/: application.py  landing_page.py  login_page.py  today_page.py
qag_python_final_project_todoist/web_model/pages/: application.py  landing_page.py  login_page.py  today_page.py
schemas/: get_tasks_schema.py
test/: tests_api.py
test/tests_api/: test_delete_task.py  test_get_tasks.py  test_post_task.py
test/tests_ui/: tests_login.py  tests_tasks.py
tests/android_app/: conftest.py  test_todoist.py  todoist.py
tests/api/: conftest.py  test_complete_task.py  test_delete_task.py  test_get_tasks.py  test_post_task.py  tests.py
tests/web/: test_login.py  test_placeholder_ui.py  test_tasks.py
