[project]
name = "qag-python-final-project-todoist"
version = "0.1.0"
description = ""
authors = [
    {name = "John Makarov",email = "johnmakarovqa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "selene (==2.0.0rc9)",
    "pytest (>=8.4.1,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "todoist-api-python (>=3.1.0,<4.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "appium-python-client (>=5.2.2,<6.0.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "curlify2 (>=2.0.0,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
addopts = "-s -vv --alluredir=allure-results --clean-alluredir"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
